--- a/templates/weightloss/base.html
+++ b/templates/weightloss/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Основные мета-теги для SEO -->
-    <title>{% block title %}Путь к здоровому весу{% endblock %}</title>
+    <title>{% block title %}Худеем Вместе{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}ЗдоровыйВес - ваш помощник в похудении, правильном питании и здоровом образе жизни. Рецепты, советы, форум и поддержка единомышленников.{% endblock %}">
     <meta name="keywords" content="{% block meta_keywords %}похудение, здоровый образ жизни, правильное питание, диета, рецепты, калькуляторы калорий, фитнес{% endblock %}">
     <meta name="author" content="ЗдоровыйВес">
@@ -185,6 +185,9 @@
             color: var(--white);
         }
     </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -212,14 +215,24 @@
                     <li class="nav-item">
                         <a class="nav-link {% if '/blog/' in request.path %}active{% endif %}" href="{% url 'blog_list' %}">Блог</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if '/recipes/' in request.path %}active{% endif %}" href="{% url 'recipe_list' %}">Рецепты</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle {% if '/recipes/' in request.path or '/challenges/' in request.path or '/calculators/' in request.path %}active{% endif %}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Полезности
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'recipe_list' %}">Рецепты</a></li>
+                            <li><a class="dropdown-item" href="{% url 'challenge_list' %}">Челленджи</a></li>
+                            <li><a class="dropdown-item" href="{% url 'calculators' %}">Калькуляторы</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if '/calculators/' in request.path %}active{% endif %}" href="{% url 'calculators' %}">Калькуляторы</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if '/challenges/' in request.path %}active{% endif %}" href="{% url 'challenge_list' %}">Челленджи</a>
+                        <a class="nav-link {% if '/vip/' in request.path %}active{% endif %}" href="{% url 'vip_list' %}">
+                            {% if user.is_authenticated and user.profile.is_vip %}
+                                <span class="badge badge-warning">VIP</span>
+                            {% else %}
+                                VIP
+                            {% endif %}
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if '/forum/' in request.path %}active{% endif %}" href="{% url 'forum_home' %}">Форум</a>
