--- a/templates/weightloss/home.html
+++ b/templates/weightloss/home.html
@@ -517,6 +517,7 @@
                     <div class="hero-buttons justify-content-center">
                         <a href="{% url 'register' %}" class="btn hero-btn hero-btn-primary">Начать сейчас</a>
                         <a href="{% url 'calculators' %}" class="btn hero-btn hero-btn-secondary">Расcчитать ИМТ</a>
+                        <a href="{% url 'meal_plan_list' %}" class="btn hero-btn hero-btn-secondary">План питания</a>
                     </div>
                 </div>
             </div>
